--- a/cpp-journey/CMakeLists.txt
+++ b/cpp-journey/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(journey3 journey3.cpp)
 add_executable(journey4 journey4.cpp)
 add_executable(journey5 journey5.cpp)
 add_executable(valid-palindrome valid-palindrome.cpp)
+add_executable(merge-sort merge-sort.cpp)
