--- a/workspace_c++/concurrency/CMakeLists.txt
+++ b/workspace_c++/concurrency/CMakeLists.txt
@@ -17,3 +17,13 @@ add_executable(
   mutex
   mutex.cpp
 )
+
+add_executable(
+  conditionVariable
+  conditionVariable.cpp
+)
+
+add_executable(
+  atomicCondition
+  atomicCondition.cpp
+)
