update automotive build

--- a/workspace_c++/automotive/CMakeLists.txt
+++ b/workspace_c++/automotive/CMakeLists.txt
@@ -1,8 +1,21 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(automotive LANGUAGES CXX)
+project(automotive VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(automotive main.cpp)
+set(SOURCES
+    src/Car.cpp
+    src/main.cpp
+)
+
+set(HEADERS
+    include/Car.h
+)
+
+add_executable(car ${SOURCES})
+
+target_include_directories(car PUBLIC
+    ${HEADERS}
+)
