--- a/workspace_c++/automotive/CMakeLists.txt
+++ b/workspace_c++/automotive/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(automotive VERSION 1.0)
+project(automotive VERSION 1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -16,7 +16,11 @@ set(HEADERS
     include/CarPropertyManager.h
 )
 
-add_executable(car ${SOURCES})
+add_executable(
+    car
+    ${SOURCES}
+    ${HEADERS}
+)
 
 target_include_directories(car PRIVATE
     ${HEADERS}
