--- a/workspace_c++/automotive/CMakeLists.txt
+++ b/workspace_c++/automotive/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES
     src/carpropertymanager.cpp
     src/carpropertyvalue.cpp
     src/carservice.cpp
+    src/carpropertyids.cpp
     src/main.cpp
 )
 
